kubernetes/base/wallet/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet
  namespace: wallet
  labels:
    app.kubernetes.io/name: wallet
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: wallet
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wallet
    spec:
      serviceAccountName: wallet
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 50
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values: [wallet]
                topologyKey: failure-domain.beta.kubernetes.io/zone
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values: [wallet]
                topologyKey: kubernetes.io/hostname
      containers:
        - name: wallet
          resources:
            requests:
              cpu: 0.5
              memory: 750Mi
            limits:
              cpu: 1
              memory: 1500Mi
      # Until this is fixed : https://github.com/aws/amazon-eks-pod-identity-webhook/issues/8
      securityContext:
        fsGroup: 65534
