kubernetes/base/wallet/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: wallet
  namespace: wallet
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: wallet
